--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Task Review</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -77,11 +79,32 @@
       border-radius: 12px;
       padding: 16px;
       margin: 15px;
+      cursor: pointer;
     }
-    .task-entry p {
+    .task-entry:hover {
+      background: #333540;
+    }
+    .task-title {
+      margin: 0;
+      font-weight: bold;
+    }
+    .task-details {
+      display: none;
+      margin-top: 10px;
+    }
+    .task-details.show {
+      display: block;
+    }
+    .turn-entry {
+      background: #3A3B44;
+      border-radius: 8px;
+      padding: 10px;
       margin: 5px 0;
     }
-    .accept-btn, .decline-btn {
+    .turn-entry p {
+      margin: 5px 0;
+    }
+    .accept-btn, .decline-btn, .replace-btn, .revert-btn {
       margin-top: 10px;
       padding: 8px 14px;
       font-weight: bold;
@@ -98,16 +121,35 @@
       background-color: #D32F2F;
       color: white;
     }
-
+    .replace-btn {
+      background-color: #2196F3;
+      color: white;
+      margin-right: 10px;
+    }
+    .revert-btn {
+      background-color: #FF9800;
+      color: white;
+    }
+    select {
+      padding: 8px;
+      border-radius: 6px;
+      background: #333;
+      color: #fff;
+      border: 1px solid #444754;
+      margin-top: 10px;
+    }
     .day-scroll::-webkit-scrollbar {
-  display: none;
-}
-.day-scroll {
-  -ms-overflow-style: none;  /* IE/Edge */
-  scrollbar-width: none;     /* Firefox */
-}
-
+      display: none;
+    }
+    .day-scroll {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
   </style>
+
+
+
+
 </head>
 <body>
 
@@ -130,10 +172,20 @@
 
 
 
-
   <script>
     const adminEmail = localStorage.getItem("currentAdminEmail");
     let selectedDate = new Date().toLocaleDateString("sv-SE");
+    let allUsers = [];
+  
+    async function fetchUsers() {
+      try {
+        const res = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await res.json();
+        allUsers = data.users || [];
+      } catch (err) {
+        console.error("Error fetching users:", err);
+      }
+    }
   
     async function handleDecision(title, date, index, decision, user, event) {
       try {
@@ -161,12 +213,82 @@
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to process decision");
   
-        const status = taskEntry.querySelector("p:nth-child(2)");
-        status.textContent = `Status: ${decision === "accept" ? "Accepted" : "Declined"}`;
-  
         setTimeout(() => loadTasks(), 500);
       } catch (err) {
         console.error("Error processing decision:", err);
+        const errorDiv = document.createElement("div");
+        errorDiv.style.color = "red";
+        errorDiv.textContent = `Error: ${err.message}`;
+        taskEntry.appendChild(errorDiv);
+        taskEntry.querySelectorAll("button").forEach(btn => {
+          btn.disabled = false;
+          btn.style.opacity = "1";
+        });
+      }
+    }
+  
+    async function handleReplace(title, date, index, originalUser, event) {
+      const taskEntry = event.target.closest(".task-entry");
+      const select = taskEntry.querySelector(`#replace-select-${index}`);
+      const newUser = select.value;
+      if (!newUser) return;
+  
+      try {
+        const response = await fetch("https://beemazing.onrender.com/api/replace-user", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            adminEmail,
+            title,
+            date,
+            selectedDate,
+            index,
+            originalUser,
+            newUser
+          })
+        });
+  
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to replace user");
+  
+        setTimeout(() => loadTasks(), 500);
+      } catch (err) {
+        console.error("Error replacing user:", err);
+        const errorDiv = document.createElement("div");
+        errorDiv.style.color = "red";
+        errorDiv.textContent = `Error: ${err.message}`;
+        taskEntry.appendChild(errorDiv);
+      }
+    }
+  
+    async function handleRevert(title, date, index, user, event) {
+      try {
+        const button = event.target;
+        const taskEntry = button.closest(".task-entry");
+        const buttons = taskEntry.querySelectorAll("button");
+        buttons.forEach(btn => {
+          btn.disabled = true;
+          btn.style.opacity = "0.5";
+        });
+  
+        const response = await fetch("https://beemazing.onrender.com/api/revert-decision", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            adminEmail,
+            title,
+            date,
+            selectedDate,
+            user
+          })
+        });
+  
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to revert decision");
+  
+        setTimeout(() => loadTasks(), 500);
+      } catch (err) {
+        console.error("Error reverting decision:", err);
         const errorDiv = document.createElement("div");
         errorDiv.style.color = "red";
         errorDiv.textContent = `Error: ${err.message}`;
@@ -189,7 +311,11 @@
         const container = document.getElementById("taskContainer");
         container.innerHTML = "";
   
+        const tasksByTitle = {};
         tasks.forEach(task => {
+          if (!tasksByTitle[task.title]) {
+            tasksByTitle[task.title] = [];
+          }
           const pendingCompletions = task.pendingCompletions?.[selectedDate] || [];
           const completions = task.completions?.[selectedDate] || [];
           const userOrder = task.users || [];
@@ -200,23 +326,52 @@
   
           const fullTurn = [];
           for (let i = 0; i < requiredTimes; i++) {
-            fullTurn.push(userOrder[i % userOrder.length]);
+            const user = task.tempTurnReplacement?.[selectedDate]?.[i] || userOrder[i % userOrder.length];
+            fullTurn.push(user);
           }
   
           fullTurn.forEach((user, index) => {
-            const isPending = pendingCompletions.includes(user);
-            const isCompleted = completions.includes(user);
-            const div = document.createElement("div");
-            div.className = "task-entry";
-            div.innerHTML = `
-              <p><strong>${task.title}</strong> - ${user}</p>
-              <p>Status: ${isCompleted ? 'Accepted' : isPending ? 'Waiting for Review' : 'Pending'}</p>
-              ${isPending && !isCompleted ? `
-                <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', ${index}, 'accept', '${user}', event)">Accept</button>
-                <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', ${index}, 'decline', '${user}', event)">Decline</button>
-              ` : ''}
-            `;
-            container.appendChild(div);
+            tasksByTitle[task.title].push({
+              user,
+              index,
+              date: task.date,
+              isPending: pendingCompletions.includes(user),
+              isCompleted: completions.includes(user)
+            });
+          });
+        });
+  
+        Object.keys(tasksByTitle).forEach(title => {
+          const turns = tasksByTitle[title];
+          const div = document.createElement("div");
+          div.className = "task-entry";
+          div.innerHTML = `
+            <h3 class="task-title">${title}</h3>
+            <div class="task-details">
+              ${turns.map(turn => `
+                <div class="turn-entry">
+                  <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
+                  ${turn.isPending && !turn.isCompleted ? `
+                    <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
+                    <button class="decline-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'decline', '${turn.user}', event)">Decline</button>
+                  ` : turn.isCompleted ? `
+                    <button class="revert-btn" onclick="handleRevert('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Revert</button>
+                  ` : `
+                    <select id="replace-select-${turn.index}">
+                      <option value="">Select User</option>
+                      ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
+                    </select>
+                    <button class="replace-btn" onclick="handleReplace('${title}', '${turn.date}', ${turn.index}, '${turn.user}', event)">Replace</button>
+                  `}
+                </div>
+              `).join('')}
+            </div>
+          `;
+          container.appendChild(div);
+  
+          div.querySelector(".task-title").addEventListener("click", () => {
+            const details = div.querySelector(".task-details");
+            details.classList.toggle("show");
           });
         });
   
@@ -300,7 +455,7 @@
       });
     });
   
-    generateScrollableDates();
+    fetchUsers().then(() => generateScrollableDates());
   </script>
 
 
