--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 
+
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -113,6 +115,15 @@
       border-radius: 8px;
       padding: 10px;
       margin: 5px 0;
+      cursor: move;
+      transition: background 0.2s;
+    }
+    .turn-entry.dragging {
+      opacity: 0.5;
+      background: #555;
+    }
+    .turn-entry.drag-over {
+      border: 2px dashed #FFC107;
     }
     .turn-entry p {
       margin: 5px 0;
@@ -159,6 +170,8 @@
       scrollbar-width: none;
     }
   </style>
+
+
 
 
 
@@ -313,6 +326,32 @@
       }
     }
   
+    async function handleReorder(title, date, newUserOrder) {
+      try {
+        const response = await fetch("https://beemazing.onrender.com/api/reorder-turns", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            adminEmail,
+            title,
+            date,
+            users: newUserOrder
+          })
+        });
+  
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to reorder turns");
+  
+        setTimeout(() => loadTasks(), 500);
+      } catch (err) {
+        console.error("Error reordering turns:", err);
+        const errorDiv = document.createElement("div");
+        errorDiv.style.color = "red";
+        errorDiv.textContent = `Error: ${err.message}`;
+        document.getElementById("taskContainer").appendChild(errorDiv);
+      }
+    }
+  
     async function loadTasks() {
       try {
         const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
@@ -364,7 +403,7 @@
             <h3 class="task-title">${title}${pendingCount > 0 ? `<span class="notification-bubble">${pendingCount}</span>` : ''}</h3>
             <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
               ${turns.map(turn => `
-                <div class="turn-entry">
+                <div class="turn-entry" draggable="true" data-index="${turn.index}">
                   <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
                   ${turn.isPending && !turn.isCompleted ? `
                     <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
@@ -392,6 +431,44 @@
             } else {
               expandedTasks.delete(title);
             }
+          });
+  
+          const turnEntries = div.querySelectorAll(".turn-entry");
+          turnEntries.forEach(turn => {
+            turn.addEventListener("dragstart", (e) => {
+              turn.classList.add("dragging");
+              e.dataTransfer.setData("text/plain", turn.dataset.index);
+            });
+  
+            turn.addEventListener("dragend", () => {
+              turn.classList.remove("dragging");
+              turnEntries.forEach(t => t.classList.remove("drag-over"));
+            });
+  
+            turn.addEventListener("dragover", (e) => {
+              e.preventDefault();
+              turn.classList.add("drag-over");
+            });
+  
+            turn.addEventListener("dragleave", () => {
+              turn.classList.remove("drag-over");
+            });
+  
+            turn.addEventListener("drop", (e) => {
+              e.preventDefault();
+              turn.classList.remove("drag-over");
+              const draggedIndex = parseInt(e.dataTransfer.getData("text/plain"));
+              const droppedIndex = parseInt(turn.dataset.index);
+  
+              if (draggedIndex !== droppedIndex) {
+                const newTurns = [...turns];
+                const [draggedTurn] = newTurns.splice(draggedIndex, 1);
+                newTurns.splice(droppedIndex, 0, draggedTurn);
+  
+                const newUserOrder = newTurns.map(t => t.user);
+                handleReorder(title, date, newUserOrder);
+              }
+            });
           });
         });
   
@@ -477,7 +554,6 @@
   
     fetchUsers().then(() => generateScrollableDates());
   </script>
-
 
 
 </body>
