--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -9,6 +9,8 @@
 
 
 
+
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -39,6 +41,10 @@
       padding: 5px 10px;
       border-radius: 6px;
       cursor: pointer;
+      transition: transform 0.1s ease;
+    }
+    .month-nav button:hover {
+      transform: scale(1.05);
     }
     .day-scroll-wrapper {
       display: flex;
@@ -120,15 +126,19 @@
       position: relative;
     }
     .turn-entry.dragging {
-      opacity: 0.7;
-      transform: scale(1.05);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      opacity: 0.9;
+      transform: scale(1.15) translateY(-2px);
+      box-shadow: 0 8px 20px rgba(255, 193, 7, 0.5), 0 0 10px rgba(255, 193, 7, 0.3);
       z-index: 100;
+      border: 2px solid #FFC107;
     }
     .turn-entry.drag-over {
       border: 2px dashed #FFC107;
       background: #4A4B54;
-      transform: translateY(2px);
+      transform: translateY(6px);
+    }
+    .turn-entry.reordered {
+      animation: slide 0.4s ease;
     }
     .turn-entry p {
       margin: 5px 0;
@@ -179,13 +189,12 @@
       scrollbar-width: none;
     }
     @keyframes slide {
-      from { transform: translateY(10px); opacity: 0; }
+      from { transform: translateY(15px); opacity: 0.6; }
       to { transform: translateY(0); opacity: 1; }
     }
-    .turn-entry {
-      animation: slide 0.3s ease;
-    }
   </style>
+
+
 
 
 
@@ -206,7 +215,6 @@
   </div>
 
   <div id="taskContainer">Loading tasks...</div>
-
 
 
 
@@ -264,6 +272,7 @@
           btn.disabled = false;
           btn.style.opacity = "1";
         });
+        setTimeout(() => errorDiv.remove(), 3000);
       }
     }
   
@@ -271,7 +280,14 @@
       const taskEntry = event.target.closest(".task-entry");
       const select = taskEntry.querySelector(`#replace-select-${index}`);
       const newUser = select.value;
-      if (!newUser) return;
+      if (!newUser || newUser === originalUser) {
+        const errorDiv = document.createElement("div");
+        errorDiv.style.color = "red";
+        errorDiv.textContent = "Please select a different user.";
+        taskEntry.appendChild(errorDiv);
+        setTimeout(() => errorDiv.remove(), 3000);
+        return;
+      }
   
       try {
         const response = await fetch("https://beemazing.onrender.com/api/replace-user", {
@@ -298,6 +314,7 @@
         errorDiv.style.color = "red";
         errorDiv.textContent = `Error: ${err.message}`;
         taskEntry.appendChild(errorDiv);
+        setTimeout(() => errorDiv.remove(), 3000);
       }
     }
   
@@ -337,6 +354,7 @@
           btn.disabled = false;
           btn.style.opacity = "1";
         });
+        setTimeout(() => errorDiv.remove(), 3000);
       }
     }
   
@@ -363,6 +381,7 @@
         errorDiv.style.color = "red";
         errorDiv.textContent = `Error: ${err.message}`;
         document.getElementById("taskContainer").appendChild(errorDiv);
+        setTimeout(() => errorDiv.remove(), 3000);
       }
     }
   
@@ -380,7 +399,7 @@
         const tasksByTitle = {};
         tasks.forEach(task => {
           if (!tasksByTitle[task.title]) {
-            tasksByTitle[task.title] = { turns: [], pendingCount: 0, date: task.date };
+            tasksByTitle[task.title] = { turns: [], pendingCount: 0, date: task.date, userOrder: task.users || [] };
           }
           const pendingCompletions = task.pendingCompletions?.[selectedDate] || [];
           const completions = task.completions?.[selectedDate] || [];
@@ -410,14 +429,14 @@
         });
   
         Object.keys(tasksByTitle).sort().forEach(title => {
-          const { turns, pendingCount, date } = tasksByTitle[title];
+          const { turns, pendingCount, date, userOrder } = tasksByTitle[title];
           const div = document.createElement("div");
           div.className = "task-entry";
           div.innerHTML = `
             <h3 class="task-title">${title}${pendingCount > 0 ? `<span class="notification-bubble">${pendingCount}</span>` : ''}</h3>
             <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
               ${turns.map(turn => `
-                <div class="turn-entry" draggable="true" data-index="${turn.index}">
+                <div class="turn-entry" draggable="true" data-index="${turn.index}" data-user="${turn.user}">
                   <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
                   ${turn.isPending && !turn.isCompleted ? `
                     <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
@@ -451,7 +470,10 @@
           turnEntries.forEach(turn => {
             turn.addEventListener("dragstart", (e) => {
               turn.classList.add("dragging");
-              e.dataTransfer.setData("text/plain", turn.dataset.index);
+              e.dataTransfer.setData("text/plain", JSON.stringify({
+                index: turn.dataset.index,
+                user: turn.dataset.user
+              }));
             });
   
             turn.addEventListener("dragend", () => {
@@ -471,16 +493,16 @@
             turn.addEventListener("drop", (e) => {
               e.preventDefault();
               turn.classList.remove("drag-over");
-              const draggedIndex = parseInt(e.dataTransfer.getData("text/plain"));
+              const draggedData = JSON.parse(e.dataTransfer.getData("text/plain"));
+              const draggedIndex = parseInt(draggedData.index);
               const droppedIndex = parseInt(turn.dataset.index);
   
               if (draggedIndex !== droppedIndex) {
                 const newTurns = [...turns];
-                // Swap the turns at draggedIndex and droppedIndex
-                [newTurns[draggedIndex], newTurns[droppedIndex]] = [newTurns[droppedIndex], newTurns[draggedIndex]];
-                // Update indices to reflect new order
-                newTurns.forEach((t, i) => t.index = i);
+                // Swap users at draggedIndex and droppedIndex
+                [newTurns[draggedIndex].user, newTurns[droppedIndex].user] = [newTurns[droppedIndex].user, newTurns[draggedIndex].user];
                 const newUserOrder = newTurns.map(t => t.user);
+                turnEntries.forEach(t => t.classList.add("reordered"));
                 handleReorder(title, date, newUserOrder);
               }
             });
@@ -569,7 +591,6 @@
   
     fetchUsers().then(() => generateScrollableDates());
   </script>
-
 
 
 
